--- a/css/styles.css
+++ b/css/styles.css
@@ -9,7 +9,7 @@
 
 
 body{
-    width: 500vw;
+    width: 600vw;
 overflow-y: hidden;
 }
 
@@ -17,13 +17,13 @@ overflow-y: hidden;
     width: 8%;
     position: absolute;
     top:400px;
-    
+    left: 1400px;
 }
 
 header{
     z-index: 1;
     position: absolute;
-    width: 100vw;
+    max-width: 1920vw;
     height: 100vh;
   aspect-ratio: 1/1;
 background-size: 100% 100%;
@@ -43,10 +43,11 @@ width: 98%;
 h1{
     position: relative;
     font-size: 800%;
+   width: 100vw;
     color: #ffffff;
     font-family: gloria hallelujah;
-    left: 90px;
-top:-100px;
+    left: 50px;
+top:-10vh;
 }
 
 h2{
