--- a/css/styles.css
+++ b/css/styles.css
@@ -94,6 +94,7 @@ bottom: 500px;
 .gaz{
   position: relative;
   width: 100%;
+height:15%;
   top: 395px;
 }
 
@@ -151,6 +152,7 @@ background-size: 100% 100%;
 .gazon{
     position: relative;
     width: 100%;
+    
     top: 726px;
 }
 
