--- a/css/styles.css
+++ b/css/styles.css
@@ -10,7 +10,7 @@
 
 body{
     width: 600vw;
-overflow-y: hidden;
+height: 600vh;
 }
 
 .flech{
@@ -75,14 +75,14 @@ width: 100vw;
 main #chap1{
 
     background-image: url("../img/img_arriere_plan/ciel.png");
-    position: absolute;
+    position: fixed;
     z-index: 2;
-    width: 150vw;
+    width: 100vw;
     height: 100vh;
   aspect-ratio: 1/1;
 background-size: 100% 100%;
   background-position: 0 0;
-  left: 1714px;
+  top: 809px;
 }
 
 .jour{
@@ -95,7 +95,7 @@ bottom: 500px;
   position: relative;
   width: 100%;
 height:15%;
-  top: 395px;
+  top:380px;
 }
 
 .spritesheet{
@@ -134,7 +134,7 @@ top:450px;
 @keyframes marche {
   from { background-position: 0 0; }
   to { background-position: -7600% 0; } 
-  /* Note: 19 images x 700px = 13300px */
+
 }
 
 main #chap2{
