--- a/css/styles.css
+++ b/css/styles.css
@@ -166,8 +166,8 @@ background-size: 100% 100%;
 .montagne3{
   position: relative;
   top:-539px;
-
-  width: 200%;
+  
+  min-width: 200%;
 }
 
 .petit{
