--- a/css/styles.css
+++ b/css/styles.css
@@ -371,12 +371,19 @@ background-size: 100% 100%;
 
 }
 
+.vole{
+  position: relative;
+  width: 70%;
+  bottom: 700px;
+left:190px;
+}
+
 main #chap7{
 
     background-image: url("../img/img_arriere_plan/ciel_apres_tomber.png");
     position: relative;
     width: 100vw;
-    height: 100vh;
+    height: 130vh;
   aspect-ratio: 1/1;
 background-size: 100% 100%;
   background-position: 0 0;
@@ -384,10 +391,51 @@ background-size: 100% 100%;
 
 }
 
+
+.spritesheet2{
+  z-index: 1;
+  position: relative;
+  left: 600px;
+top:0px;
+  width: 20vw;
+ height: 40vh;
+ aspect-ratio: 1/1;
+  background-size: 7600% 100%;
+  background-position: 0 0;
+  background-image: url("../img/img_personnages/marche_ball.png");
+  animation-name: marche;
+  animation-duration: 1s;
+  animation-iteration-count: infinite;
+  animation-play-state: paused;
+  animation-timing-function: steps(76);
+}
+
+.is-scrolling .spritesheet2{
+
+  width: 20vw;
+ height: 40vh;
+ aspect-ratio: 1/1;
+  background-size: 7600% 100%;
+  background-position: 0 0;
+  background-image: url("../img/img_personnages/marche_ball.png");
+  animation-name: marche;
+  animation-duration: 1s;
+  animation-iteration-count: infinite;
+  animation-play-state: running;
+  animation-timing-function: steps(76);
+}
+
+@keyframes marche {
+  from { background-position: 0 0; }
+  to { background-position: -7600% 0; } 
+
+}
+
 .sol{
     position: relative;
     width: 100%;
-    top: 671px;
+    height: 20%;
+    top: 866px;
 }
 
 .soleil{
@@ -407,6 +455,14 @@ background-size: 100% 100%;
   background-position: 0 0;
   top: 730px;
 
+}
+
+.couple{
+  position: absolute;
+  top:206px;
+  right:294px;
+  
+  width: 65%;
 }
 
 #chap8 .soleil{
