--- a/css/styles.css
+++ b/css/styles.css
@@ -373,10 +373,17 @@ background-size: 100% 100%;
 
 }
 
+.oiseau{
+  position: absolute;
+  right: 800px;
+  bottom: 1080px;
+  width: 60%;
+}
+
 .vole{
   position: relative;
   width: 70%;
-  bottom: 700px;
+ top: 700px;
 left:190px;
 }
 
