--- a/css/styles.css
+++ b/css/styles.css
@@ -15,10 +15,10 @@ height: 100vh;
 }
 
 .flech{
-    width: 8%;
+    width: 6%;
     position: absolute;
-    top:400px;
-    left: 1400px;
+    top:480px;
+    left: 900px;
 }
 
 header{
@@ -36,29 +36,29 @@ width: 98%;
 }
 
 h1{
-    position: relative;
+    position: absolute;
     font-size: 600%;
    width: 100vw;
     color: #ffffff;
     font-family: gloria hallelujah;
-    left: 400px;
-top:10vh;
+    left: 350px;
+top:2vh;
 }
 
 h2{
     position: absolute;
-    font-size: 500%;
+    font-size: 370%;
     color: #ffffff;
     font-family: gloria hallelujah;
-    top:295px;
-    left:250px;
+    top:270px;
+    left:550px;
 }
 
 p{
     color:white;
-    position: relative;
+    position: absolute;
     font-size: 13px;
-    top:510px;
+    top:730px;
 left:500px;
 }
 
@@ -89,10 +89,10 @@ background-size: 100% 100%;
 }
 
 .jour{
-  position: relative;
+  position: absolute;
   width: 15%;
   left: 1200px;
-bottom: 400px;
+bottom: 570px;
 }
 
 .gaz{
