--- a/css/styles.css
+++ b/css/styles.css
@@ -11,7 +11,7 @@
 body{
    width: 1920px;
 height: 1080px;
-overflow-x: hidden;
+
 
 }
 
@@ -72,7 +72,7 @@ max-width: 1920px;
 
 main section{
   position:relative;
-  
+  border: solid 1px red;
   width: 100%;
 }
 
@@ -115,15 +115,15 @@ bottom: 580px;
 .gaz{
   position: absolute;
   width: 100%;
-height:15%;
+height:30%;
 bottom:0%;
 }
 
 .spritesheet{
   z-index: 1;
   position: relative;
-  left: 600px;
-top:500px;
+  left: -300px;
+top:380px;
   width: 20%;
  height: 40%;
  aspect-ratio: 1/1;
