--- a/css/styles.css
+++ b/css/styles.css
@@ -372,9 +372,18 @@ color: var(--jaune);
 
 .tomber{
   position: relative;
-  width: 70%;
-  bottom: 800px;
-left:280px;
+  display: inline-block;
+  width: 20%;
+  top: 0%;
+right:0%;
+border: solid 2px red;
+padding: 100;
+}
+
+#chap5 svg{
+  position: relative;
+  bottom: 400px;
+right: -400px;
 }
 
 .nuage{
@@ -403,6 +412,7 @@ left:250px;
       top:240px
     }
     
+   
 
     /*chapitre 6*/
 main #chap6{
@@ -459,8 +469,8 @@ background-size: 100% 100%;
 .spritesheet2{
   z-index: 1;
   position: relative;
-  left: 600px;
-top:50px;
+  left: -460px;
+top:-350px;
   width: 20%;
  height: 40%;
  aspect-ratio: 1/1;
@@ -498,15 +508,16 @@ top:50px;
 .sol{
     position: relative;
     width: 100%;
-    height:20%;
-    top: 866px;
+    height:40%;
+    top: 600px;
 }
 
 .soleil{
     position: relative;
   left: 1400px;
-bottom: 100px;
+bottom: 300px;
 }
+
 
 
 /*chapitre 8*/
