--- a/css/styles.css
+++ b/css/styles.css
@@ -6,7 +6,7 @@
     --mauve:#7768D0;
     --rouge:#F6788F;
     --rouge:#ff4daf;
-    --rouge:#ffffff00;
+
 }
 
 
@@ -14,7 +14,7 @@
 body{
    width: 1920px;
 height: 1080px;
-
+overflow-x: hidden;
 
 }
 
@@ -91,6 +91,27 @@ main section{
     font-family: gloria hallelujah;
 }
 
+
+ul.technique-gsap{
+  background: rgba(0,0,0,0.3);
+  color: white;
+  font-size: 10px;
+  font-family: monospace;
+  font-weight: 400;
+  width: auto;
+  display: inline-block;
+  padding: 10px 20px 12px 20px;
+  margin: 0;
+  max-width: 300px;
+  position: absolute;
+  z-index: 1000;
+  top: 0;
+  left: 90px;
+}
+
+ul.technique-gsap li{
+  margin: 5px 0;
+}
 
 /*chapitre 1*/
 main #chap1{
